--- a/wwwroot/appsettings.json
+++ b/wwwroot/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
+  "Url": "https://api4.hospitalmetropolitano.org",
   "ConnectionStrings": {
     "Produccion": "Data Source=(DESCRIPTION =(ADDRESS = (PROTOCOL = PROTOCOLNAME)(HOST = HOSTNAME)(PORT = PORTNAME))(CONNECT_DATA =(SERVICE_NAME = SERVICENAME))); User Id=IDNAME;Password=PASSWORDNAME;"
   }
